# RECAST3D

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  README.md  doc.md  index.html  setup.py  sitemap.xml
changelog/: index.html
conda/: build.sh  build_environment.yml  cross-linux.cmake  meta.yaml
contribute/design/: index.html
contribute/recast3d/: index.html
contribute/release_procedure/: index.html
contribute/slicerecon/: index.html
contribute/tomopackets/: index.html
doc/: protocol.md
docs/: .buildinfo  Makefile  README.md  changelog.html  conf.py  conventions.html  genindex.html  index.html  index.rst  make.bat  mkdocs.yml  objects.inv  overview.html  protocol.md  py-modindex.html  readme.html  search.html  searchindex.js  setup.html  tomop.html  usage.html
docs/.doctrees/: changelog.doctree  conventions.doctree  environment.pickle  index.doctree  overview.doctree  readme.doctree  setup.doctree  tomop.doctree  usage.doctree
docs/_modules/: index.html
docs/_sources/: changelog.md.txt  conventions.rst.txt  index.rst.txt  readme.md.txt  usage.rst.txt
docs/doctrees/: changelog.doctree  conventions.doctree  environment.pickle  index.doctree  overview.doctree  readme.doctree  tomop.doctree  usage.doctree
docs/html/: .buildinfo  genindex.html  py-modindex.html  search.html  usage.html
docs/pages/: installation_instructions.md  live_software_stack.md  slicerecon.md  tomopackets.md  user_guide.md
docs/pipeline_protocol/: slice_based_pipeline.md
docs_sphinx/: Makefile  conf.py  conventions.rst  index.rst  overview.rst  slicerecon.rst
example/: CMakeLists.txt  plugin.py  push_flexdata.py  push_flexray.py  push_projections.cpp  setting_up_server.cpp  slicerecon_push_aps_32id.py  slicerecon_push_flexdata.py  slicerecon_push_tomobank_dynamic_foam.py  slicerecon_push_tomos.cpp  slicerecon_server.cpp
examples/: client.cpp  example_scaled_slicereconstruction.py  reconstruction_server.py  simple_example.py  slice_reconstructor.py
examples/adapters/: flexdata_adapter.py  ser_adapter.py
examples/plugins/: otsu_plugin.py
include/: configurable.hpp  input.hpp  input_handler.hpp  math_common.hpp  packet_listener.hpp  packets.hpp  path.hpp  scene.hpp  scene_list.hpp  serialize.hpp  server.hpp  ticker.hpp  tomovis.hpp  util.hpp
include/graphics/: .scene_object.hpp.swp  animations.hpp  colormap.hpp  entity.hpp  material.hpp  mesh.hpp  model.hpp  node_animation.hpp  primitives.hpp  render_target.hpp  renderer.hpp  scene_camera.hpp  scene_camera_2d.hpp  scene_camera_3d.hpp  scene_object.hpp  scene_object_2d.hpp  scene_object_3d.hpp  shader_program.hpp  slice.hpp  textures.hpp  window.hpp
include/modules/: control.hpp  geometry.hpp  partitioning.hpp  reconstruction.hpp  scene_management.hpp  scene_module.hpp
include/packets/: geometry_packets.hpp  partitioning_packets.hpp  reconstruction_packets.hpp  scene_management_packets.hpp
include/server/: server.hpp
include/slicerecon/: slicerecon.hpp
include/tomop/: descriptors.hpp  exceptions.hpp  multiserver.hpp  packets.hpp  publisher.hpp  serialize.hpp  server.hpp  tomop.hpp
installation_instructions/: index.html
python/: clean_clock.py  clock_test.py  kill_test.py  module.cpp  multi_queue_test.py  multi_test.py  setup.py  test.py  tomop.py
python/slicerecon/: __init__.py
python/src/: module.cpp
recast3d/: CMakeLists.txt  README.md
recast3d/conda/: build.sh  conda_build_config.yaml  meta.yaml
recast3d/docs/: mkdocs.yml
recast3d/examples/: client.cpp
recast3d/include/: math_common.hpp  packet_listener.hpp
recast3d/src/: input.cpp  main.cpp  math_common.cpp
search/: search_index.json
slicerecon/: CMakeLists.txt  README.md  setup.py
slicerecon/conda/: build.sh  conda_build_config.yaml  meta.yaml
slicerecon/docs/: changelog.html  conventions.html  search.html  slicerecon.html
slicerecon/docs/.doctrees/: slicerecon.doctree  usage.doctree
slicerecon/docs/_sources/: overview.rst.txt
slicerecon/docs/_static/: documentation_options.js
slicerecon/docs_sphinx/: Makefile  usage.rst
slicerecon/example/: CMakeLists.txt  slicerecon_push_tomos.cpp
slicerecon/example/adapters/: slicerecon_push_h5.py
slicerecon/example/plugins/: otsu_plugin.py
slicerecon/include/slicerecon/: slicerecon.hpp
slicerecon/include/slicerecon/reconstruction/: helpers.hpp  reconstructor.hpp
slicerecon/include/slicerecon/servers/: projection_server.hpp  visualization_server.hpp
slicerecon/include/slicerecon/util/: bench.hpp  data_types.hpp  exceptions.hpp  log.hpp  util.hpp
slicerecon/python/: CMakeLists.txt  setup.py
slicerecon/python/src/: module.cpp
slicerecon/slicerecon/: __init__.py  module.cpp
slicerecon/src/: slicerecon_server.cpp
slicerecon/src/reconstruction/: reconstructor.cpp
slicerecon/src/util/: log.cpp  processing.cpp  util.cpp
src/: input.cpp  main.cpp  math_common.cpp  path.cpp  scene.cpp  scene_list.cpp  util.cpp
src/graphics/: .scene_object.cpp.swp  mesh.cpp  model.cpp  primitives.cpp  renderer.cpp  scene_camera.cpp  scene_camera_2d.cpp  scene_camera_3d.cpp  scene_object.cpp  scene_object_2d.cpp  scene_object_3d.cpp  shader_program.cpp  slice.cpp  window.cpp
src/reconstruction/: helpers.cpp  reconstructor.cpp
src/server/: server.cpp
src/shaders/: basic_model.frag  basic_model.vert  beam.frag  beam.vert  lines.frag  lines.vert  part.frag  screen.frag  screen.vert  shadow_model.frag  shadow_model.vert  show_texture.frag  simple.frag  (+6 more)
test/: initialization.cpp  test_server.cpp
tomop/: __init__.py  module.cpp  simple_example.py
tomopackets/: CMakeLists.txt  README.md  setup.py
tomopackets/conda/: build.sh  build_environment.yml  conda_build_config.yaml  meta.yaml
tomopackets/docs/: index.html  overview.html
tomopackets/docs/.doctrees/: readme.doctree  tomop.doctree
tomopackets/docs_sphinx/: tomop.rst
tomopackets/examples/adapters/: flexdata_adapter.py  zero_adapter.py
tomopackets/include/tomop/: multiserver.hpp
tomopackets/include/tomop/packets/: partitioning_packets.hpp
tomopackets/tomop/: module.cpp
users/: zero_adapter.py
(+99 files in other folders)
